# FastAPI_Course-Sinerji

./: README.md
.github/workflows/: pipeline.yml
fast_zero/: :memory  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
fast_zero/.github/workflows/: pipeline.yaml  pipeline.yml
fast_zero/fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/fast_zero/routers/: auth.py  todo.py  users.py
fast_zero/migrations/versions/: 10d7a899fe15_create_migration.py  6e4653cda68a_add_user_and_todo_table.py
fast_zero/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_todo.py  test_users.py
